@@ -1,20 +1,36 @@
-![Descripción alternativa](./src/main/resources/static/imagen.png)
-
-<p align="center">
-    <a href="https://youtube.com/@unprogramadornace" target="_blank"><img align="center" src="https://img.shields.io/badge/YouTube-FF0000?style=for-the-badge&logo=youtube&logoColor=white" alt="@unprogramadornace" /></a>
-    <a href="https://www.linkedin.com/in/UnProgramadorNace"  target="_blank"><img align="center" src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="@unprogramadornace"/></a>
-    <a href="https://www.facebook.com/people/Un-Programador-Nace/61552057605223/"  target="_blank"><img align="center" src="https://img.shields.io/badge/Facebook-1877F2?style=for-the-badge&logo=facebook&logoColor=white" alt="@unprogramadornace" /></a>
-    <a href = "mailto:unprogramadornace@gmail.com" target="_blank"><img align="center" src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="@unprogramadornace" /></a>
-</p>
-
 # Java Mock Testing
 
-Muchas gracias por estar aquí, si te gusta mi contenido y son de gran utilidad para ti por favor ayudame dando tu valioso like al video y suscribiéndote al canal, ya que esto es de gran ayuda para mí y me motiva a seguir creando contenido de gran utilidad para ti.
+Proyecto simple de pruebas unitarias en Java, siguiendo el tutorial:   
+[Dominando las Pruebas Unitarias en JAVA | Mockito](https://youtu.be/0VivFIbTZ3c?si=lgUJNYV9aC6_LWF4).  
+  
+## Tecnologías utilizadas  
+- **Spring Boot**
+- **JUnit 5** - Framework de pruebas unitarias.
+- **Mockito** - Para crear mocks y testear en aislamiento.
+- **JaCoCo** - Para generar reportes de cobertura de código.
+- **Maven** - como herramienta de construcción.
 
-También me ayuda mucho si puedes marcar el repositorio con una estrella en la parte superior de la derecha, sería un gran detalle de tu parte.
+## Cobertura de código
+La cobertura de pruebas se genera con **JaCoCo** y puede visualizarse ejecutando:
 
-### Comando para la JVM: -ea -XX:+EnableDynamicAgentLoading -Xshare:off
+```bash
+    mvn jacoco:report
+```  
+El informe se encontrará en `target/site/jacoco/index.html`.
 
-Enlace al canal: https://www.youtube.com/channel/UCTXForyROk00E6jiaNKSV1A
+### Captura del reporte de cobertura
+![image](https://github.com/user-attachments/assets/26bc7f0b-47ff-44d5-9131-6e374571b44c)
 
-Saludos!
+---
+# Pasos para clonar el proyecto
+```bash
+    git clone https://github.com/AbrilSabatini/test  
+```
+```bash
+    cd test
+```
+### Ejecutar los tests con Maven
+```bash
+    mvn test
+```
+O en `src/test/java/org/mock/service/ImplPlayerServiceTest.java`.
